settings screen and some language fixes

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,18 +1,72 @@
 {
-  "homepageTitle": "Keşfet",
-  "homepageDescription": "Hazır olan diyaloglar ile sohbet başlat!",
-  "homepageCategoryEmail": "Mail",
-  "homepageCategoryEducation": "Eğitim",
-  "homepageCategoryArt": "Sanat",
-  "homepageCategoryFun": "Eğlence",
-  "homepageCategorySocial": "Sosyal",
-  "homepageCategoryTravel": "Gezi",
+  "homepageTitle": "Discover!",
+  "homepageDescription": "Start a conversation with ready-made dialogs!",
+  "homepageCategoryEmail": "EMail",
+  "homepageCategoryEducation": "Education",
+  "homepageCategoryArt": "Art",
+  "homepageCategoryFun": "Fun",
+  "homepageCategorySocial": "Social",
+  "homepageCategoryTravel": "Travel",
 
-  "chatsTitle": "Sohbetler",
-  "chatsDescription": "Sohbet geçmişin!",
-  "chatsMyChat": "Sohbetim",
-  "chatsDeleteErrorTitle": "Hata",
-  "chatsDeleteErrorMessage": "Sohbet kaydı silinirken hata oluştu!",
-  "chatsDeleteSuccessTitle": "Başarılı",
-  "chatsDeleteSuccessMessage": "Sohbet kaydı başarıyla silindi!"
+  "chatsTitle": "Chats",
+  "chatsDescription": "Your chat history!",
+  "chatsMyChat": "My Chat",
+  "chatsDeleteErrorTitle": "Error",
+  "chatsDeleteErrorMessage": "Error deleting chat log!",
+  "chatsDeleteSuccessTitle": "Success",
+  "chatsDeleteSuccessMessage": "Chat log successfully deleted!",
+
+  "settingsPageTitle": "Settings",
+  "settingsPageDescription": "User Settings",
+  "settingsPageAccountSettings": "Account Settings",
+  "settingsPageAppSettings": "App Settings",
+  "settingsPageThemeTitle": "Theme Settings",
+  "settingsPageThemeDescription": "Application Theme",
+  "settingsPageThemeDark": "Dark",
+  "settingsPageThemeLight": "Light",
+  "settingsPageLangTitle": "Language Settings",
+  "settingsPageLangDescription": "Application Language",
+  "settingsPageLangTurkish": "Turkish",
+  "settingsPageLangEnglish": "English",
+  "settingsPageFontTitle": "Font Size",
+  "settingsPageFontDescription": "Font Settings",
+  "settingsPageFontModalDescription": "Font Settings",
+  "settingsPageNotificationTitle": "Notification Settings",
+  "settingsPageNotificationDescription": "Notification",
+  "settingsPageNotificationYes": "Yes",
+  "settingsPageNotificationNo": "No",
+  "settingsPageLogout": "Logout",
+
+  "settingsPagePersonalInfoTitle": "Personal Information",
+  "settingsPageNameSurname": "Name Surname",
+  "settingsPageEmail": "Email Address",
+  "settingsPageEmailInput": "Email",
+  "settingsPageEmailDescription": "You cannot change your email address for security reasons :/",
+  "settingsPageSaveButton": "Save",
+  "settingsPageSecurityInfoTitle": "Security Information",
+  "settingsPageCurrentPassword": "Current Password",
+  "settingsPageNewPassword": "New Password",
+  "settingsPageNewPasswordAgain": "New Password Again",
+  "settingsPageNameUpdateSuccess": "Success",
+  "settingsPageNameUpdateSuccessMessage": "Name successfully updated!",
+  "settingsPageNameUpdateError": "Error",
+  "settingsPageNameUpdateErrorMessage": "Error updating name!",
+  "settingsPageNameUpdateShortError": "The name cannot be less than 3 characters!",
+  "settingsPagePasswordSuccess": "Success",
+  "settingsPagePasswordSuccessMessage": "Your password has been successfully updated!",
+  "settingsPagePasswordError": "Error",
+  "settingsPagePasswordErrorMessage": "Error updating your password!",
+  "settingsPagePasswordInfo": "Info",
+  "settingsPagePasswordSessionErrorMessage": "You must log in again to verify your session!",
+  "settingsPagePasswordMatchErrorMessage": "Passwords don't match!",
+  "settingsPagePasswordShortErrorMessage": "Password cannot be less than 8 characters!",
+
+  "settingsReAuthenticateTitle": "Hello",
+  "settingsReAuthenticateDesc": "To do this, you need to verify your session.",
+  "settingsReAuthenticatePassword": "Password",
+  "settingsReAuthenticateSuccess": "Success",
+  "settingsReAuthenticateSuccessMessage": "Session Verification successful!",
+  "settingsReAuthenticateError": "Error",
+  "settingsReAuthenticateErrorMessage": "Email or password is incorrect!",
+  "settingsReAuthenticateButton": "Sign In"
 }
