--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -14,5 +14,59 @@
   "chatsDeleteErrorTitle": "Hata",
   "chatsDeleteErrorMessage": "Sohbet kaydı silinirken hata oluştu!",
   "chatsDeleteSuccessTitle": "Başarılı",
-  "chatsDeleteSuccessMessage": "Sohbet kaydı başarıyla silindi!"
+  "chatsDeleteSuccessMessage": "Sohbet kaydı başarıyla silindi!",
+
+  "settingsPageTitle": "Ayarlar",
+  "settingsPageDescription": "Kullanıcı Ayarların",
+  "settingsPageAccountSettings": "Hesap Ayarları",
+  "settingsPageAppSettings": "Uygulama Ayarları",
+  "settingsPageThemeTitle": "Tema Ayarları",
+  "settingsPageThemeDescription": "Uygulama Görünümü",
+  "settingsPageThemeDark": "Koyu",
+  "settingsPageThemeLight": "Açık",
+  "settingsPageLangTitle": "Dil Ayarları",
+  "settingsPageLangDescription": "Uygulama Dili",
+  "settingsPageLangTurkish": "Türkçe",
+  "settingsPageLangEnglish": "İngilizce",
+  "settingsPageFontTitle": "Yazı Boyutu",
+  "settingsPageFontDescription": "Yazı Seçenekleri",
+  "settingsPageFontModalDescription": "Yazı Seçenekleri",
+  "settingsPageNotificationTitle": "Bildirim Ayarları",
+  "settingsPageNotificationDescription": "Bildirimler",
+  "settingsPageNotificationYes": "Evet",
+  "settingsPageNotificationNo": "Hayır",
+  "settingsPageLogout": "Çıkış Yap",
+
+  "settingsPagePersonalInfoTitle": "Kişisel Bilgilerin",
+  "settingsPageNameSurname": "İsim Soyisim",
+  "settingsPageEmail": "Email Adresin",
+  "settingsPageEmailInput": "Email",
+  "settingsPageEmailDescription": "Güvenlik sebepleri nedeniyle email adresini şuanlık değiştiremiyorsun :/",
+  "settingsPageSaveButton": "Kaydet",
+  "settingsPageSecurityInfoTitle": "Güvenlik Bilgilerin",
+  "settingsPageCurrentPassword": "Mevcut Şifren",
+  "settingsPageNewPassword": "Yeni Şifren",
+  "settingsPageNewPasswordAgain": "Yeni Şifreni Tekrarla",
+  "settingsPageNameUpdateSuccess": "Başarılı",
+  "settingsPageNameUpdateSuccessMessage": "İsim başarıyla güncellendi!",
+  "settingsPageNameUpdateError": "Hata",
+  "settingsPageNameUpdateErrorMessage": "İsim güncellenirken hata oluştu!",
+  "settingsPageNameUpdateShortError": "İsim 3 karakterden az olamaz!",
+  "settingsPagePasswordSuccess": "Başarılı",
+  "settingsPagePasswordSuccessMessage": "Şifreniz başarıyla güncellendi!",
+  "settingsPagePasswordError": "Hata",
+  "settingsPagePasswordErrorMessage": "Şifreniz güncellenirken hata oluştu!",
+  "settingsPagePasswordInfo": "Bilgilendirme",
+  "settingsPagePasswordSessionErrorMessage": "Oturumunuzu doğrulamak için tekrar giriş yapmalısınız!",
+  "settingsPagePasswordMatchErrorMessage": "Şifreler eşleşmiyor!",
+  "settingsPagePasswordShortErrorMessage": "Şifre 8 karakterden küçük olamaz!",
+
+  "settingsReAuthenticateTitle": "Merhaba",
+  "settingsReAuthenticateDesc": "Bu işlemi yapmak için oturumunuzu doğrulamanız gerekli.",
+  "settingsReAuthenticatePassword": "Şifreniz",
+  "settingsReAuthenticateSuccess": "Başarılı",
+  "settingsReAuthenticateSuccessMessage": "Oturum Doğrulaması başarılı!",
+  "settingsReAuthenticateError": "Hata",
+  "settingsReAuthenticateErrorMessage": "Email veya şifre yanlış!",
+  "settingsReAuthenticateButton": "Giriş Yap"
 }
