translates added, some bugs fixed

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -31,6 +31,9 @@
   "settingsPageFontTitle": "Font Size",
   "settingsPageFontDescription": "Font Settings",
   "settingsPageFontModalDescription": "Font Settings",
+  "settingsPageFontSmaller": "Smaller",
+  "settingsPageFontMedium": "Normal",
+  "settingsPageFontLarger": "Larger",
   "settingsPageNotificationTitle": "Notification Settings",
   "settingsPageNotificationDescription": "Notification",
   "settingsPageNotificationYes": "Yes",
@@ -60,6 +63,10 @@
   "settingsPagePasswordSessionErrorMessage": "You must log in again to verify your session!",
   "settingsPagePasswordMatchErrorMessage": "Passwords don't match!",
   "settingsPagePasswordShortErrorMessage": "Password cannot be less than 8 characters!",
+  "settingsPageLogoutSuccessTitle": "Success",
+  "settingsPageLogoutSuccessMessage": "Successfully logged out.",
+  "settingsPageLogoutErrorTitle": "Error",
+  "settingsPageLogoutErrorMessage": "Error logging out!",
 
   "settingsReAuthenticateTitle": "Hello",
   "settingsReAuthenticateDesc": "To do this, you need to verify your session.",
@@ -68,5 +75,53 @@
   "settingsReAuthenticateSuccessMessage": "Session Verification successful!",
   "settingsReAuthenticateError": "Error",
   "settingsReAuthenticateErrorMessage": "Email or password is incorrect!",
-  "settingsReAuthenticateButton": "Sign In"
+  "settingsReAuthenticateButton": "Sign In",
+
+  "chatScreenAddImageCamera": "Add image with the camera!",
+  "chatScreenAddImageGallery": "Add image from the gallery!",
+  "chatScreenDeleteChat": "Delete Chat",
+  "chatScreenMessagesTitle": "Messages",
+  "chatScreenNewChatTitle": "New Chat",
+  "chatScreenRemoveImageTitle": "Information",
+  "chatScreenRemoveImageMessage": "The images have been successfully removed!",
+  "chatScreenImageSelectedLabel": "image selected!",
+  "chatScreenMessageInput": "Message...",
+  "chatScreenErrorMessage": "Hello, there was an error creating an response! Error:",
+  "chatScreenImageLoadError": "Image can't loaded...",
+
+  "authPageLoginTitle": "Login",
+  "authPageLoginDescription": "Access the details of your account!",
+  "authPageLoginEmail": "Email",
+  "authPageLoginPassword": "Password",
+  "authPageLoginButton": "Log In",
+  "authPageLoginErrorTitle": "Error",
+  "authPageLoginErrorMessage": "Your email address or password is incorrect!",
+  "authPageLoginSuccessTitle": "Success",
+  "authPageLoginSuccessMessage": "Successfully logged in!",
+  "authPageLoginDontHaveAccount": "Don't you have an account?",
+  "authPageLoginRegisterButton": "Sign Up",
+
+  "authPageRegisterTitle": "Sign Up",
+  "authPageRegisterDescription": "Access the details of your account!",
+  "authPageRegisterEmail": "Email",
+  "authPageRegisterPassword": "Password",
+  "authPageRegisterButton": "Sign Up",
+  "authPageRegisterErrorTitle": "Error",
+  "authPageRegisterErrorMessage": "An error occurred while registering!",
+  "authPageRegisterSuccessTitle": "Success",
+  "authPageRegisterSuccessMessage": "You have successfully registered!",
+  "authPageRegisterEmailErrorTitle": "Error",
+  "authPageRegisterEmailErrorMessage": "The email entered is already in use!",
+  "authPageRegisterAlreadyHaveAccount": "Don't you have an account?",
+  "authPageRegisterLoginButton": "Log In",
+  "authPageLoginForgotPassword": "Forgot your password?",
+
+  "authPageForgotPasswordTitle": "Forgot your password?",
+  "authPageForgotPasswordDescription": "You can reset your password by entering your email address!",
+  "authPageForgotPasswordEmail": "Email",
+  "authPageForgotPasswordSend": "Send",
+  "authPageForgotPasswordSuccessTitle": "Success",
+  "authPageForgotPasswordSuccessMessage": "Password reset link sent successfully!",
+  "authPageForgotPasswordErrorTitle": "Error",
+  "authPageForgotPasswordErrorMessage": "Error sending the password reset link!"
 }
