--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -31,6 +31,9 @@
   "settingsPageFontTitle": "Yazı Boyutu",
   "settingsPageFontDescription": "Yazı Seçenekleri",
   "settingsPageFontModalDescription": "Yazı Seçenekleri",
+  "settingsPageFontSmaller": "Küçük",
+  "settingsPageFontMedium": "Normal",
+  "settingsPageFontLarger": "Büyük",
   "settingsPageNotificationTitle": "Bildirim Ayarları",
   "settingsPageNotificationDescription": "Bildirimler",
   "settingsPageNotificationYes": "Evet",
@@ -60,6 +63,10 @@
   "settingsPagePasswordSessionErrorMessage": "Oturumunuzu doğrulamak için tekrar giriş yapmalısınız!",
   "settingsPagePasswordMatchErrorMessage": "Şifreler eşleşmiyor!",
   "settingsPagePasswordShortErrorMessage": "Şifre 8 karakterden küçük olamaz!",
+  "settingsPageLogoutSuccessTitle": "Başarılı",
+  "settingsPageLogoutSuccessMessage": "Başarıyla çıkış yapıldı!",
+  "settingsPageLogoutErrorTitle": "Hata",
+  "settingsPageLogoutErrorMessage": "Çıkış yapılırken hata oluştu!",
 
   "settingsReAuthenticateTitle": "Merhaba",
   "settingsReAuthenticateDesc": "Bu işlemi yapmak için oturumunuzu doğrulamanız gerekli.",
@@ -68,5 +75,53 @@
   "settingsReAuthenticateSuccessMessage": "Oturum Doğrulaması başarılı!",
   "settingsReAuthenticateError": "Hata",
   "settingsReAuthenticateErrorMessage": "Email veya şifre yanlış!",
-  "settingsReAuthenticateButton": "Giriş Yap"
+  "settingsReAuthenticateButton": "Giriş Yap",
+
+  "chatScreenAddImageCamera": "Kamera ile görüntü ekle!",
+  "chatScreenAddImageGallery": "Galeriden görüntü ekle!",
+  "chatScreenDeleteChat": "Sohbeti Sil",
+  "chatScreenMessagesTitle": "Mesajlar",
+  "chatScreenNewChatTitle": "Yeni Sohbet",
+  "chatScreenRemoveImageTitle": "Bilgilendirme",
+  "chatScreenRemoveImageMessage": "Görüntüler başarıyla kaldırıldı!",
+  "chatScreenImageSelectedLabel": "görüntü seçildi!",
+  "chatScreenMessageInput": "Mesajınız...",
+  "chatScreenErrorMessage": "Merhaba, cevap oluştulurken hata oluştu! Hata:",
+  "chatScreenImageLoadError": "Resim yüklenemedi...",
+
+  "authPageLoginTitle": "Giriş Yap",
+  "authPageLoginDescription": "Hesabınızın detaylarına erişin!",
+  "authPageLoginEmail": "Email",
+  "authPageLoginPassword": "Şifre",
+  "authPageLoginButton": "Giriş Yap",
+  "authPageLoginErrorTitle": "Hata",
+  "authPageLoginErrorMessage": "Email adresiniz veya şifreniz yanlış!",
+  "authPageLoginSuccessTitle": "Başarılı",
+  "authPageLoginSuccessMessage": "Başarıyla giriş yapıldı!",
+  "authPageLoginDontHaveAccount": "Hesabınız yok mu?",
+  "authPageLoginRegisterButton": "Kayıt Ol",
+
+  "authPageRegisterTitle": "Kayıt Ol",
+  "authPageRegisterDescription": "Hesabınızın detaylarına erişin!",
+  "authPageRegisterEmail": "Email",
+  "authPageRegisterPassword": "Şifre",
+  "authPageRegisterButton": "Kayıt Ol",
+  "authPageRegisterErrorTitle": "Hata",
+  "authPageRegisterErrorMessage": "Kayıt olunurken bir hata oluştu!",
+  "authPageRegisterSuccessTitle": "Başarılı",
+  "authPageRegisterSuccessMessage": "Başarıyla kayıt oldunuz!",
+  "authPageRegisterEmailErrorTitle": "Hata",
+  "authPageRegisterEmailErrorMessage": "Girilen email zaten kullanılıyor!",
+  "authPageLoginAlreadyHaveAccount": "Hesabınız yok mu?",
+  "authPageLoginLoginButton": "Giriş Yap",
+  "authPageLoginForgotPassword": "Şifreni mi unuttun?",
+
+  "authPageForgotPasswordTitle": "Şifreni mi unuttun?",
+  "authPageForgotPasswordDescription": "Email adresini girerek şifreni sıfırlayabilirsin!",
+  "authPageForgotPasswordEmail": "Email",
+  "authPageForgotPasswordSend": "Gönder",
+  "authPageForgotPasswordSuccessTitle": "Başarılı",
+  "authPageForgotPasswordSuccessMessage": "Şifre sıfırlama bağlantısı başarıyla gönderildi!",
+  "authPageForgotPasswordErrorTitle": "Hata",
+  "authPageForgotPasswordErrorMessage": "Şifre sıfırlama bağlantısı gönderilirken hata oluştu!"
 }
