--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,4 +1,6 @@
 {
+  "loadingText": "Loading...",
+
   "homepageTitle": "Discover!",
   "homepageDescription": "Start a conversation with ready-made dialogs!",
   "homepageCategoryEmail": "EMail",
