--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -1,4 +1,6 @@
 {
+  "loadingText": "Yükleniyor...",
+
   "homepageTitle": "Keşfet",
   "homepageDescription": "Hazır olan diyaloglar ile sohbet başlat!",
   "homepageCategoryEmail": "Mail",
