code formatter enhancements, prompts added, some bugs fixed

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -92,6 +92,8 @@
   "chatScreenErrorMessage": "Hello, there was an error creating an response! Error:",
   "chatScreenImageLoadError": "Image can't loaded...",
   "chatScreenCopyButton": "Copy",
+  "chatScreenImageAddErrorTitle": "Error",
+  "chatScreenImageAddErrorMessage": "Error adding image! Try again...",
 
   "authPageLoginTitle": "Login",
   "authPageLoginDescription": "Access the details of your account!",
